[add] cleaning data section

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -223,6 +223,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Displaying of dataframe and information about it"
    ]
@@ -3825,6 +3830,20 @@
     "# Making a new column from the grouped data\n",
     "age_sex_dataframe.assign(has_hands_percentage = (respondents_has_hands / respondents_sexuality) * 100)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
