[add] working with datetime section

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -472,6 +472,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Selecting rows and columns"
    ]
@@ -4630,6 +4635,465 @@
     "# Converting a column to other data type\n",
     "people_dataframe['has_hands'] = people_dataframe['has_hands'].astype(bool)\n",
     "people_dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Working with date time objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 590,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-13 20:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>131.82</td>\n",
+       "      <td>126.87</td>\n",
+       "      <td>128.71</td>\n",
+       "      <td>1940673.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-13 19:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>132.02</td>\n",
+       "      <td>117.10</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>7579741.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-13 18:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>115.50</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>4898735.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-13 17:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>127.42</td>\n",
+       "      <td>121.63</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>2753450.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-13 16:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>129.51</td>\n",
+       "      <td>120.17</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>4461424.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23669</th>\n",
+       "      <td>2017-07-01 15:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>265.74</td>\n",
+       "      <td>272.74</td>\n",
+       "      <td>265.00</td>\n",
+       "      <td>272.57</td>\n",
+       "      <td>1500282.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23670</th>\n",
+       "      <td>2017-07-01 14:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>268.79</td>\n",
+       "      <td>269.90</td>\n",
+       "      <td>265.00</td>\n",
+       "      <td>265.74</td>\n",
+       "      <td>1702536.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23671</th>\n",
+       "      <td>2017-07-01 13:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>274.83</td>\n",
+       "      <td>274.93</td>\n",
+       "      <td>265.00</td>\n",
+       "      <td>268.79</td>\n",
+       "      <td>3010787.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23672</th>\n",
+       "      <td>2017-07-01 12:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>271.00</td>\n",
+       "      <td>274.83</td>\n",
+       "      <td>824362.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23673</th>\n",
+       "      <td>2017-07-01 11:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>279.98</td>\n",
+       "      <td>279.99</td>\n",
+       "      <td>272.10</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>679358.87</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>23674 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     date  symbol    open    high     low   close      volume\n",
+       "0     2020-03-13 20:00:00  ETHUSD  129.94  131.82  126.87  128.71  1940673.93\n",
+       "1     2020-03-13 19:00:00  ETHUSD  119.51  132.02  117.10  129.94  7579741.09\n",
+       "2     2020-03-13 18:00:00  ETHUSD  124.47  124.85  115.50  119.51  4898735.81\n",
+       "3     2020-03-13 17:00:00  ETHUSD  124.08  127.42  121.63  124.47  2753450.92\n",
+       "4     2020-03-13 16:00:00  ETHUSD  124.85  129.51  120.17  124.08  4461424.71\n",
+       "...                   ...     ...     ...     ...     ...     ...         ...\n",
+       "23669 2017-07-01 15:00:00  ETHUSD  265.74  272.74  265.00  272.57  1500282.55\n",
+       "23670 2017-07-01 14:00:00  ETHUSD  268.79  269.90  265.00  265.74  1702536.85\n",
+       "23671 2017-07-01 13:00:00  ETHUSD  274.83  274.93  265.00  268.79  3010787.99\n",
+       "23672 2017-07-01 12:00:00  ETHUSD  275.01  275.01  271.00  274.83   824362.87\n",
+       "23673 2017-07-01 11:00:00  ETHUSD  279.98  279.99  272.10  275.01   679358.87\n",
+       "\n",
+       "[23674 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 590,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reading the dataframe and parsing dates\n",
+    "from datetime import datetime\n",
+    "\n",
+    "d_parser = lambda date: datetime.strptime(date, r'%Y-%m-%d %I-%p')\n",
+    "eth_dataframe = pd.read_csv('data\\ETH_1h.csv', index_col=0, parse_dates=['Date'], date_parser=d_parser)\n",
+    "\n",
+    "eth_dataframe.columns = eth_dataframe.columns.str.lower()\n",
+    "eth_dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 580,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 23674 entries, 0 to 23673\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   date    23674 non-null  object \n",
+      " 1   symbol  23674 non-null  object \n",
+      " 2   open    23674 non-null  float64\n",
+      " 3   high    23674 non-null  float64\n",
+      " 4   low     23674 non-null  float64\n",
+      " 5   close   23674 non-null  float64\n",
+      " 6   volume  23674 non-null  float64\n",
+      "dtypes: float64(5), object(2)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Analyzing data types of the dataframe \n",
+    "eth_dataframe.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 592,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converting the date column to date time object\n",
+    "# eth_dataframe['date'] = pd.to_datetime(eth_dataframe['date'], format=r'%Y-%m-%d %I-%p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 605,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Appending new day of the week column to the dataframe with date time method\n",
+    "eth_dataframe = eth_dataframe.assign(day_of_week = eth_dataframe['date'].dt.day_name())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 609,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Moving the day of week column next to date\n",
+    "eth_dataframe = eth_dataframe[['date', 'day_of_week', 'symbol', 'open', 'high', 'low', 'close', 'volume']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 610,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-13 20:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>131.82</td>\n",
+       "      <td>126.87</td>\n",
+       "      <td>128.71</td>\n",
+       "      <td>1940673.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-13 19:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>132.02</td>\n",
+       "      <td>117.10</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>7579741.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-13 18:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>115.50</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>4898735.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-13 17:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>127.42</td>\n",
+       "      <td>121.63</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>2753450.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-13 16:00:00</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>129.51</td>\n",
+       "      <td>120.17</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>4461424.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23669</th>\n",
+       "      <td>2017-07-01 15:00:00</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>265.74</td>\n",
+       "      <td>272.74</td>\n",
+       "      <td>265.00</td>\n",
+       "      <td>272.57</td>\n",
+       "      <td>1500282.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23670</th>\n",
+       "      <td>2017-07-01 14:00:00</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>268.79</td>\n",
+       "      <td>269.90</td>\n",
+       "      <td>265.00</td>\n",
+       "      <td>265.74</td>\n",
+       "      <td>1702536.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23671</th>\n",
+       "      <td>2017-07-01 13:00:00</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>274.83</td>\n",
+       "      <td>274.93</td>\n",
+       "      <td>265.00</td>\n",
+       "      <td>268.79</td>\n",
+       "      <td>3010787.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23672</th>\n",
+       "      <td>2017-07-01 12:00:00</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>271.00</td>\n",
+       "      <td>274.83</td>\n",
+       "      <td>824362.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23673</th>\n",
+       "      <td>2017-07-01 11:00:00</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>279.98</td>\n",
+       "      <td>279.99</td>\n",
+       "      <td>272.10</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>679358.87</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>23674 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     date day_of_week  symbol    open    high     low   close  \\\n",
+       "0     2020-03-13 20:00:00      Friday  ETHUSD  129.94  131.82  126.87  128.71   \n",
+       "1     2020-03-13 19:00:00      Friday  ETHUSD  119.51  132.02  117.10  129.94   \n",
+       "2     2020-03-13 18:00:00      Friday  ETHUSD  124.47  124.85  115.50  119.51   \n",
+       "3     2020-03-13 17:00:00      Friday  ETHUSD  124.08  127.42  121.63  124.47   \n",
+       "4     2020-03-13 16:00:00      Friday  ETHUSD  124.85  129.51  120.17  124.08   \n",
+       "...                   ...         ...     ...     ...     ...     ...     ...   \n",
+       "23669 2017-07-01 15:00:00    Saturday  ETHUSD  265.74  272.74  265.00  272.57   \n",
+       "23670 2017-07-01 14:00:00    Saturday  ETHUSD  268.79  269.90  265.00  265.74   \n",
+       "23671 2017-07-01 13:00:00    Saturday  ETHUSD  274.83  274.93  265.00  268.79   \n",
+       "23672 2017-07-01 12:00:00    Saturday  ETHUSD  275.01  275.01  271.00  274.83   \n",
+       "23673 2017-07-01 11:00:00    Saturday  ETHUSD  279.98  279.99  272.10  275.01   \n",
+       "\n",
+       "           volume  \n",
+       "0      1940673.93  \n",
+       "1      7579741.09  \n",
+       "2      4898735.81  \n",
+       "3      2753450.92  \n",
+       "4      4461424.71  \n",
+       "...           ...  \n",
+       "23669  1500282.55  \n",
+       "23670  1702536.85  \n",
+       "23671  3010787.99  \n",
+       "23672   824362.87  \n",
+       "23673   679358.87  \n",
+       "\n",
+       "[23674 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 610,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eth_dataframe"
    ]
   }
  ],
