[add] visualization with seaborn.stripplot

--- a/seaborn.ipynb
+++ b/seaborn.ipynb
@@ -1186,6 +1186,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Data visualization with seaborn.stripplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ipywidgets import interactive\n",
+    "\n",
+    "def jitter_widget(jitter=0.1):\n",
+    "    sns.stripplot(\n",
+    "        x='distance',\n",
+    "        y='payment',\n",
+    "        hue='color',\n",
+    "        alpha=0.5,\n",
+    "        size=3,\n",
+    "        jitter=jitter,\n",
+    "        dodge=True,\n",
+    "        data=taxis_dataframe,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3287c1aee37f4302ac06104916a7b85c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=0.1, description='jitter', max=0.5), Output()), _dom_classes=('widget-…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "interactive(jitter_widget, jitter=(0, 0.5))"
+   ]
   }
  ],
  "metadata": {
