--- a/main/ipython-notebooks/numpy.ipynb
+++ b/main/ipython-notebooks/numpy.ipynb
@@ -290,6 +290,80 @@
     "print(f\"Median: {np.median(arr)}\")\n",
     "print(f\"Sum: {np.sum(arr)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reshaping arr to 2 rows and 5 elements\n",
+      " [[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "\n",
+      "Random integer array with number range of 0-10 and a size of 6\n",
+      "[5 8 9 5 0 0]\n",
+      "Max value in the array: 9\n",
+      "Index of max value in the array: 2\n",
+      "Min value in the array: 0\n",
+      "Index of min value in the array: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numpy operations\n",
+    "np.random.seed(1)\n",
+    "arr = np.arange(10)\n",
+    "print(f\"Reshaping arr to 2 rows and 5 elements\\n {arr.reshape(2,5)}\")\n",
+    "\n",
+    "arr = np.random.randint(0,10,6) \n",
+    "print(f\"\\nRandom integer array with number range of 0-10 and a size of 6\\n{arr}\")\n",
+    "print(f\"Max value in the array: {arr.max()}\")\n",
+    "print(f\"Index of max value in the array: {arr.argmax()}\")\n",
+    "print(f\"Min value in the array: {arr.min()}\")\n",
+    "print(f\"Index of min value in the array: {arr.argmin()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Numpy linear algebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "[ 0  2  4  6  8 10 12 14 16 18 20]\n",
+      "[ 0  3  6  9 12 15 18 21 24 27 30]\n",
+      "[  0   1   4   9  16  25  36  49  64  81 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(0,11)\n",
+    "\n",
+    "print(arr)\n",
+    "print(arr + arr)\n",
+    "print(arr * 3)\n",
+    "print(arr ** 2)"
+   ]
   }
  ],
  "metadata": {
